Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -10,14 +10,14 @@
 
 ## Введение
 
-В любой операционной системе перед использованием диск необходимо разбить на разделы. Раздел - это логическое подмножество физического диска, и информация о разделах хранится в таблице разделов. Эта таблица включает информацию о первом и последнем 
+В любой операционной системе, перед использованием, диск необходимо разбить на разделы. Раздел - это логическое подмножество физического диска, а информация о разделах хранится в таблице разделов. Эта таблица включает информацию о первом и последнем 
 секторах раздела и его типе, а также дополнительные сведения о каждом разделе.
 
-Обычно каждый раздел рассматривается операционной системой как отдельный «диск», даже если все они находятся на одном физическом носителе. В системах Windows им присваиваются такие буквы, как `C:` (исторически основной диск), `D:` и так далее. В Linux каждый раздел привязан к каталогу в `/dev`, например `/dev/sda1` или `/dev/sda2`.
+Обычно каждый раздел рассматривается операционной системой как отдельный «диск», даже если все они находятся на одном физическом носителе. В системах Windows им присваиваются такие буквы, как `C:\`(исторически основной диск), `D:\` и так далее. В Linux каждый раздел привязан к каталогу внутри `/dev`, например `/dev/sda1` или `/dev/sda2`.
 
-В этом уроке вы узнаете, как создавать, удалять, восстанавливать и изменять размер разделов с помощью трех наиболее распространенных утилит (`fdisk`, `gdisk` и `parted`), как создать на них файловую систему и как создать и настроить `раздел подкачки` или `файл подкачки` для использования их в качестве виртуальной памяти.
+В этом уроке вы узнаете, как создавать, удалять, восстанавливать и изменять размеры разделов с помощью трех наиболее распространенных утилит(`fdisk`, `gdisk` и `parted`), как создать на них файловую систему и как создать и настроить `раздел подкачки` или `файл подкачки` для использования его в качестве виртуальной памяти.
 
->По историческим причинам в этом уроке мы будем называть носители данных «дисками», хотя современные системы хранения, такие как твердотельные накопители и флэш-накопители, вообще не содержат никаких «дисков».
+>По историческим причинам в этом уроке мы будем называть носители данных - «дисками», хотя современные системы хранения, такие как SSD или флэш-накопители, вообще не содержат никаких «дисков».
 
 
 ## Понимание MBR и GPT
@@ -25,24 +25,24 @@
 Есть два основных способа хранения информации о разделах на жестких дисках. Первый - это MBR (*Master Boot Record*), а второй - это GPT (*GUID Partition Table*).
 
 * MBR  
-	Это пережиток первых дней MS-DOS(точнее, PC-DOS 2.0 с 1983 года) и на протяжении десятилетий был стандартной схемой разделения на ПК. Таблица разделов хранится в первом секторе диска, называемом *загрузочным сектором*, вместе с загрузчиком, которым в системах Linux обычно является загрузчик *GRUB*. Но MBR имеет ряд ограничений, которые препятствуют его использованию в современных системах, например невозможность адресовать диски размером более 2 ТБ и ограничение до 4 основных раздела на диск.
+	Это пережиток первых дней MS-DOS(точнее, PC-DOS 2.0 с 1983 года) и на протяжении десятилетий был стандартной схемой разбиения на PC. Таблица разделов хранится в первом секторе диска, называемом *загрузочным сектором*, вместе с загрузчиком, которым в системах Linux обычно является загрузчик *GRUB*. Но MBR имеет ряд ограничений, которые препятствуют его использованию в современных системах, например невозможность адресовать диски размером более 2 ТБ и ограничение количества основных разделов на диске до четырех.
 
 * GPT  
-	Система разделения, которая устраняет многие ограничения MBR. Практического ограничения на размер диска нет, а максимальное количество разделов ограничено только самой операционной системой. Она чаще встречается на более современных машинах, которые используют UEFI вместо старого BIOS.
+	Система разделения, которая устраняет многие ограничения MBR. Ограничения на размер диска практически нет, а максимальное количество разделов ограничивается только самой операционной системой. Она чаще встречается на более современных машинах, которые используют UEFI вместо старого BIOS.
 
-Во время задач системного администрирования весьма вероятно, что вы обнаружите, что используются обе схемы, поэтому важно знать, как использовать инструменты, связанные с каждой из них для создания, удаления или изменения разделов.
+Выполняя задачи системного администрирования весьма вероятно, вы обнаружите, что используются обе схемы, поэтому важно знать, как использовать инструменты, связанные с каждой из них для создания, удаления или изменения разделов.
 
 
 ### Управление разделами MBR с помощью FDISK
 
-Стандартная утилита для управления разделами MBR в Linux - `fdisk`. Это интерактивная утилита с меню. Чтобы использовать его, введите `fdisk`, а затем имя устройства, соответствующего диску, который вы хотите редактировать. Например, команда
+Стандартная утилита для управления разделами MBR в Linux - это `fdisk`. Это интерактивная утилита с меню. Чтобы использовать ее, введите `fdisk`, а затем имя устройства, соответствующего диску, который вы хотите отредактировать. Например, команда
 ```console
 # fdisk /dev/sda
 ```
 будет редактировать таблицу разделов первого устройства, подключенного к SATA (`sda`) в системе. Имейте в виду, что вам нужно указать устройство, соответствующее физическому диску, а не одному из его разделов (например, `/dev/sda1`).
 >Все операции с дисками в этом уроке должны выполняться от имени пользователя `root` (системного администратора) или с правами root с помощью `sudo`.
 
-При вызове `fdisk` покажет приветствие, затем предупреждение и будет ждать ваших команд.
+При вызове `fdisk`, покажет приветствие, затем предупреждение и будет ждать ваших команд.
 ```console
 # fdisk /dev/sda
 Welcome to fdisk (util-linux 2.33.1).
@@ -51,8 +51,9 @@ Be careful before using the write command.
 
 Command (m for help):
 ```
-Предупреждение важно. Вы можете создавать, редактировать или удалять разделы по своему желанию, но `ничего` не будет записано на диск, если вы не используете команду write (`w`). Таким образом, вы можете «практиковаться» без риска потери данных, пока не нажимаете клавишу `w`. Чтобы выйти из `fdis`k без сохранения изменений, используйте команду `q`.
->При этом никогда не следует практиковаться на важном диске, поскольку всегда есть риски. Вместо этого используйте запасной внешний диск или USB-накопитель.
+Это предупреждение важно. Вы можете создавать, редактировать или удалять разделы по своему желанию, но `ничего` не будет записано на диск, пока вы не используете команду write (`w`). Таким образом, вы можете «практиковаться» без риска потери данных, пока не нажимете клавишу `w`. Чтобы выйти из `fdisk` без сохранения изменений, используйте команду `q`.
+>При этом никогда не следует практиковаться на важном диске, поскольку риски есть всегда. Вместо этого используйте запасной внешний диск или USB-накопитель.
+
 
 #### Вывод текущей таблицы разделов
 
@@ -89,13 +90,14 @@ Device     Boot     Start       End   Sectors   Size Id Type
 * `Type`  
 	Описание типа раздела.
 
+
 #### Основной или расширеный разделы
 
-На MBR-диске может быть 2 основных типа разделов: *primary* и *extended*. Как мы уже говорили, у вас может быть только 4 основных раздела на диске, и если вы хотите сделать диск «загрузочным», первый раздел должен быть основным. 
+На MBR-диске может быть два основных типа разделов: *primary* и *extended*. Как мы уже говорили, у вас может быть только четыре основных раздела на диске, а если вы хотите сделать диск «загрузочным», первый раздел должен быть основным. 
 
-Один из способов обойти это ограничение - создать расширенный раздел, который действует как контейнер для *logical* разделов. У вас может быть, например, первичный раздел, расширенный раздел, занимающий оставшуюся часть дискового пространства, и пять логических разделов внутри него.
+Один из способов обойти это ограничение - создать расширенный раздел, который будет действовать как контейнер для *logical* разделов. У вас может быть, например, основной раздел, расширенный раздел, занимающий оставшуюся часть дискового пространства, и пять логических разделов внутри него.
 
-Для такой операционной системы, как Linux, первичные и расширенные разделы обрабатываются одинаково, поэтому нет «преимуществ» использования одного над другим.
+Для такой операционной системы, как Linux, основные и расширенные разделы обрабатываются одинаково, поэтому нет «преимуществ» использования одного над другим.
 
 
 #### Создание раздела
@@ -114,6 +116,7 @@ First sector (2048-3903577, default 2048): 2048
 Last sector, +/-sectors or +/-size{K,M,G,T,P} (2048-3903577, default 3903577): +1G
 ```
 
+
 #### Проверка на незанятое пространство
 
 Если вы не знаете, сколько свободного места на диске, вы можете использовать команду `F`, чтобы показать нераспределенное пространство, например:
@@ -126,6 +129,7 @@ Sector size (logical/physical): 512 bytes / 512 bytes
   Start     End Sectors  Size
 2099200 3903577 1804378  881M
 ```
+
 
 #### Удаление разделов
 
