Update 101.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
@@ -8,6 +8,32 @@
 | Урок:         | 1 из 1                                      |
 
 
-# Введение
+## Введение
 
-Для управления машиной основной компонент операционной системы - ядро ​​- должен быть загружен программой, называемой загрузчиком, которая сама загружается с помощью предустановленной прошивки, такой как BIOS или UEFI. Загрузчик можно настроить для передачи параметров ядру, например, какой раздел содержит корневую файловую систему или в каком режиме должна выполняться операционная система. После загрузки ядро ​​продолжает процесс загрузки, идентифицируя и настраивая оборудование. Наконец, ядро ​​вызывает утилиту, отвечающую за запуск системных служб и управление ими.
+Для управления машиной, основной компонент операционной системы - ядро, должно быть загружено программой, называемой загрузчиком, которая сама загружается с помощью предустановленной прошивки, такой как BIOS или UEFI. Загрузчик можно настроить для передачи параметров ядру, например, какой раздел содержит корневую файловую систему или в каком режиме должна выполняться операционная система. После загрузки ядро продолжает процесс загрузки, идентифицируя и настраивая оборудование. Наконец, ядро вызывает утилиту, отвечающую за запуск системных служб и управление ими.
+
+>В некоторых дистрибутивах Linux для команд, выполняемых в этом уроке, могут потребоваться привилегии root.
+
+
+## BIOS или UEFI
+
+Процедуры, выполняемые машинами x86 для запуска загрузчика, различны, и используют они BIOS или UEFI. BIOS, сокращение от Basic Input/Output System, - это программа, хранящаяся в микросхеме энергонезависимой памяти, прикрепленной к материнской плате, и выполняется каждый раз при включении компьютера. Этот тип программы называется прошивкой, и ее место хранения отдельно от других запоминающих устройств, которые может иметь система. BIOS предполагает, что первые 440 байтов в первом запоминающем устройстве - следуя порядку, определенному в служебной программе настройки BIOS - являются первым этапом загрузчика(также называемого *начальным загрузчиком*). Первые 512 байтов запоминающего устройства называются MBR(*Master Boot Record*) запоминающих устройств, использующих стандартную схему разделов DOS, и, в дополнение к первому этапу загрузчика, содержат таблицу разделов. Если MBR не содержит правильных данных, система не сможет загрузиться, если не будет использован альтернативный метод. 
+
+Говоря вцелом, предварительные шаги для загрузки системы, оснащенной BIOS, следующие: 
+* Процесс POST(*power-on self-test*) выполняется для выявления простых отказов оборудования сразу после включения машины.
+* BIOS активирует основные компоненты для загрузки системы, такие как видеовыход, клавиатура и носители. 
+* BIOS загружает первый уровень загрузчика из MBR (первые 440 байтов первого устройства, как определено в утилите конфигурации BIOS). 
+* Первый уровень загрузчика вызывает второй уровень загрузчика, отвечающий за представление параметров загрузки и загрузку ядра. 
+
+UEFI, сокращение от *Unified Extensible Firmware Interface*, отличается от BIOS в некоторых ключевых моментах. Как и BIOS, UEFI также является прошивкой, но он может идентифицировать разделы и читать большинство файловых системы, обнаруженные на них. UEFI не полагается на MBR, принимая во внимание только настройки, хранящиеся в его энергонезависимой памяти(*NVRAM*), подключенной к материнской плате. Эти значения указывают на расположение программ, совместимых с UEFI, называемых приложениями EFI, которые будут выполняться автоматически или вызываться из меню загрузки. Приложения EFI могут быть загрузчиками, селекторами операционной системы, инструментами для диагностики и восстановления системы и т.д. Они должны находиться в обычном разделе устройства хранения и в совместимой файловой системе. Стандартные совместимые файловые системы - FAT12, FAT16 и FAT32 для блочных устройств и ISO-9660 для оптических носителей. Такой подход позволяет реализовать гораздо более сложные инструменты, чем те, которые возможны в BIOS. 
+
+Раздел, содержащий приложения EFI, называется *системным разделом EFI* или просто ESP. Этот раздел не должен использоваться совместно с другими системными файловыми системами, такими как корневая файловая система или файловые системы пользовательских данных. Каталог EFI в разделе ESP содержит приложения, на которые указывают записи, сохраненные в NVRAM. 
+
+В общем, шаги перед загрузкой операционной системы в системе с UEFI: 
+* Процесс POST(*самотестирование при включении*) выполняется для выявления простых отказов оборудования сразу после включения машины. 
+* UEFI активирует основные компоненты для загрузки системы, такие как видеовыход, клавиатура и носители. 
+* Прошивка UEFI считывает настройки, хранящиеся в NVRAM, для выполнения предварительно определенного приложения EFI, хранящегося в файловой системе раздела ESP. Обычно предопределенное приложение EFI является загрузчиком. 
+* Если предварительно определенное приложение EFI является загрузчиком, оно загрузит ядро для запуска операционной системы. 
+
+Стандарт UEFI также поддерживает функцию *Secure Boot*, которая позволяет выполнять только подписанные приложения EFI, то есть приложения EFI, авторизованные производителем оборудования. Эта функция увеличивает защиту от вредоносного программного обеспечения, но может затруднить установку операционных систем, на которые не распространяется гарантия производителя.
+
