Update 101.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
@@ -165,3 +165,79 @@ oct 04 00:31:01 ubuntu-host systemd-modules-load[335]: Inserted module 'parport_
 oct 04 00:31:01 ubuntu-host systemd[1]: Starting Flush Journal to Persistent Storage...
 ```
 Инициализация и другие сообщения, выдаваемые операционной системой, хранятся в файлах в каталоге `/var/log/`. Если происходит критическая ошибка и операционная система не может продолжить процесс инициализации после загрузки ядра и initramfs, можно использовать альтернативный загрузочный носитель для запуска системы и доступа к соответствующей файловой системе. Затем файлы в `/var/log/` могут быть найдены на предмет возможных причин, вызывающих прерывание процесса загрузки. Параметры `-D` или `--directory` команды `journalctl` могут использоваться для чтения сообщений журнала в каталогах, отличных от `/var/log/ journal/`, который является местоположением по умолчанию для сообщений журнала systemd. Поскольку сообщения журнала systemd не хранятся в виде необработанного текста, для их чтения требуется команда `journalctl`.
+
+
+## Упражнения для закрепления
+
+1. Где находится двоичный файл начальной загрузки на машине с прошивкой BIOS? 
+
+
+2. Прошивка UEFI поддерживает расширенные функции, предоставляемые внешними программами, называемые приложениями EFI. Однако эти приложения имеют свое особое местоположение. Где в системе будут расположены приложения EFI? 
+
+
+3. Загрузчики позволяют передавать пользовательские параметры ядра перед его загрузкой. Предположим, что система не может загрузиться из-за неверного расположения корневой файловой системы. Как правильно указать корневую файловую систему, расположенную в `/dev/sda3`, в качестве параметра для ядра?
+
+
+4. Процесс загрузки Linux-машины заканчивается следующим сообщением:
+```console
+ALERT! /dev/sda3 does not exist. Dropping to a shell!
+```
+Какова вероятная причина этой проблемы?
+
+
+## Упражнения на размышление
+
+1. Загрузчик представит список операционных систем на выбор, если на машине установлено несколько операционных систем. Однако недавно установленная операционная система может перезаписать MBR жесткого диска, стирая первую стадию загрузчика и делая другую операционную систему недоступной. Почему этого не произошло бы на машине с прошивкой UEFI? 
+
+2. Каковы общие последствия установки собственного ядра без предоставления соответствующего образа initramfs? 
+
+3. Журнал инициализации состоит из сотен строк, поэтому выходные данные команды `dmesg` часто передаются по конвейеру команде пейджера - например, command `less` - для облегчения чтения. Какая опция `dmesg` будет автоматически разбивать свой вывод на страницы, избавляя от необходимости явно использовать команду пейджера? 
+
+4. Жесткий диск, содержащий всю файловую систему автономной машины, был удален и подключен к рабочей машине в качестве дополнительного диска. Предполагая, что его точка монтирования - `/mnt/hd`, как будет использоваться `journalctl` для проверки содержимого файлов журнала, расположенных в `/mnt/hd/var/log/journal/`?
+
+
+## Резюме
+
+В этом уроке рассматривается последовательность загрузки в стандартной системе Linux. Правильное знание того, как работает процесс загрузки системы Linux, помогает предотвратить ошибки, которые могут сделать систему недоступной. Урок проходит по следующим тематическим направлениям: 
+* Чем отличаются методы загрузки BIOS и UEFI. 
+* Типовые этапы инициализации системы. 
+* Восстановление загрузочных сообщений. 
+
+Были рассмотрены следующие команды и процедуры: 
+* Общие параметры ядра. 
+* Команды для чтения загрузочных сообщений: `dmesg` и `journalctl`.
+
+
+## Ответы на упражнения для закрепления
+
+**1. Где находится двоичный файл начальной загрузки на машине с прошивкой BIOS?**
+В MBR первого запоминающего устройства, как определено в утилите конфигурирования BIOS.
+
+**2. Прошивка UEFI поддерживает расширенные функции, предоставляемые внешними программами, называемые приложениями EFI. Однако эти приложения имеют свое особое местоположение. Где в системе будут расположены приложения EFI?**
+Приложения EFI хранятся в системном разделе EFI (ESP), расположенном в любом доступном блоке хранения с совместимой файловой системой (обычно файловой системой FAT32).
+
+**3. Загрузчики позволяют передавать пользовательские параметры ядра перед его загрузкой. Предположим, что система не может загрузиться из-за неверного расположения корневой файловой системы. Как правильно указать корневую файловую систему, расположенную в `/dev/sda3`, в качестве параметра для ядра?**
+Приложения EFI хранятся в системном разделе EFI(ESP), расположенном в любом доступном блоке хранения с совместимой файловой системой(обычно файловой системой FAT32).
+
+**4. Процесс загрузки Linux-машины заканчивается следующим сообщением:
+```console
+ALERT! /dev/sda3 does not exist. Dropping to a shell!
+```
+Какова вероятная причина этой проблемы?**
+Ядру не удалось найти устройство `/dev/sda3`, указанное как корневая файловая система.
+
+
+## Ответы на упражнения для размышления
+
+
+**1. Загрузчик представит список операционных систем на выбор, если на машине установлено несколько операционных систем. Однако недавно установленная операционная система может перезаписать MBR жесткого диска, стирая первую стадию загрузчика и делая другую операционную систему недоступной. Почему этого не произошло бы на машине с прошивкой UEFI?**
+Машины с UEFI не используют MBR жесткого диска для хранения первой стадии загрузчика.
+
+**2. Каковы общие последствия установки собственного ядра без предоставления соответствующего образа initramfs?**
+Корневая файловая система может быть недоступна, если ее тип был скомпилирован как внешний модуль ядра.
+
+**3. Журнал инициализации состоит из сотен строк, поэтому выходные данные команды `dmesg` часто передаются по конвейеру команде пагинации - например, команда `less` - для облегчения чтения. Какая опция `dmesg` будет автоматически разбивать свой вывод на страницы, избавляя от необходимости явно использовать команду пагинатора?**
+Команды `dmesg -H` или `dmesg --human` по умолчанию включают пагинацию.
+
+**4. Жесткий диск, содержащий всю файловую систему автономной машины, был удален и подключен к рабочей машине в качестве дополнительного диска. Предполагая, что его точка монтирования - `/mnt/hd`, как будет использоваться `journalctl` для проверки содержимого файлов журнала, расположенных в `/mnt/hd/var/log/journal/`?**
+С помощью команд `journalctl -D /mnt/hd/var/log/journal` или `journalctl --directory=/mnt/hd/var/log/journal`
