Update 101.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
@@ -222,11 +222,11 @@ ALERT! /dev/sda3 does not exist. Dropping to a shell!
 
 Приложения EFI хранятся в системном разделе EFI(ESP), расположенном в любом доступном блоке хранения с совместимой файловой системой(обычно файловой системой FAT32).
 
-**4. Процесс загрузки Linux-машины заканчивается следующим сообщением:
+**4. Процесс загрузки Linux-машины заканчивается следующим сообщением:**
 ```console
 ALERT! /dev/sda3 does not exist. Dropping to a shell!
 ```
-Какова вероятная причина этой проблемы?**
+**Какова вероятная причина этой проблемы?**
 
 Ядру не удалось найти устройство `/dev/sda3`, указанное как корневая файловая система.
 
