Update 101.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
@@ -178,11 +178,11 @@ oct 04 00:31:01 ubuntu-host systemd[1]: Starting Flush Journal to Persistent Sto
 3. Загрузчики позволяют передавать пользовательские параметры ядра перед его загрузкой. Предположим, что система не может загрузиться из-за неверного расположения корневой файловой системы. Как правильно указать корневую файловую систему, расположенную в `/dev/sda3`, в качестве параметра для ядра?
 
 
-4. Процесс загрузки Linux-машины заканчивается следующим сообщением:
+4. Процесс загрузки Linux-машины заканчивается следующим сообщением:  
 ```console
 ALERT! /dev/sda3 does not exist. Dropping to a shell!
 ```
-Какова вероятная причина этой проблемы?
++Какова вероятная причина этой проблемы?
 
 
 ## Упражнения на размышление
