Update 101.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
@@ -182,7 +182,7 @@ oct 04 00:31:01 ubuntu-host systemd[1]: Starting Flush Journal to Persistent Sto
 ```console
 ALERT! /dev/sda3 does not exist. Dropping to a shell!
 ```
-+Какова вероятная причина этой проблемы?
+    Какова вероятная причина этой проблемы?
 
 
 ## Упражнения на размышление
