--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
@@ -170,14 +170,15 @@ oct 04 00:31:01 ubuntu-host systemd[1]: Starting Flush Journal to Persistent Sto
 ## Упражнения для закрепления
 
 1. Где находится двоичный файл начальной загрузки на машине с прошивкой BIOS? 
+
 2. Прошивка UEFI поддерживает расширенные функции, предоставляемые внешними программами, называемые приложениями EFI. Однако эти приложения имеют свое особое местоположение. Где в системе будут расположены приложения EFI? 
+
 3. Загрузчики позволяют передавать пользовательские параметры ядра перед его загрузкой. Предположим, что система не может загрузиться из-за неверного расположения корневой файловой системы. Как правильно указать корневую файловую систему, расположенную в `/dev/sda3`, в качестве параметра для ядра?
-4. Процесс загрузки Linux-машины заканчивается следующим сообщением:  
+
+4. Какова вероятная причина проблемы если процесс загрузки Linux-машины заканчивается следующим сообщением:  
 ```console
 ALERT! /dev/sda3 does not exist. Dropping to a shell!
 ```
-Какова вероятная причина этой проблемы?
-
 
 ## Упражнения на размышление
 
