Update 101.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.2 Boot the system/101.2 Lesson 1.md
@@ -1,11 +1,11 @@
 # 101.2 Урок 1
 
-| Сертификат:   | LPIC-1                                      |
-|:--------------|:--------------------------------------------|
-| Версия:       | 5.0                                         |
-| Тема:         | 101 Архитектура системы                     |                           
-| Цель:         | 101.2 Загрузка системы                      |
-| Урок:         | 1 из 1                                      |
+| **Сертификат:** | LPIC-1                                      |
+|:----------------|:--------------------------------------------|
+| **Версия:**     | 5.0                                         |
+| **Тема:**       | 101 Системная фрхитектура                   |                           
+| **Цель:**       | 101.2 Загрузка системы                      |
+| **Урок:**       | 1 из 1                                      |
 
 
 ## Введение
