Update 101.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -1,11 +1,17 @@
 # 101.3 Урок 1
 
-| Сертификат:   | LPIC-1                                      |
-|:--------------|:--------------------------------------------|
-| Версия:       | 5.0                                         |
-| Тема:         | 101 Системная фрхитектура                   |                           
-| Цель:         | 101.3 Изменение уровней запуска/целей загрузки и выключение или перезагрузка системы |
-| Урок:         | 1 из 1                                      |
+| **Сертификат:** | LPIC-1                                      |
+|:----------------|:--------------------------------------------|
+| **Версия:**       | 5.0                                         |
+| **Тема:**         | 101 Системная фрхитектура                   |                           
+| **Цель:**         | 101.3 Изменение уровней запуска/целей загрузки и выключение или перезагрузка системы |
+| **Урок:**         | 1 из 1                                      |
 
 
 # Введение
+
+Общей чертой операционных систем, следующих принципам проектирования Unix, является использование отдельных процессов для управления отдельными функциями системы. Эти процессы, называемые демонами (или, в более общем смысле, службами), также отвечают за расширенные функции, лежащие в основе операционной системы, такие как службы сетевых приложений (HTTP-сервер, совместное использование файлов, электронная почта и т. Д.), Базы данных, конфигурация по запросу и т. Д. Несмотря на то, что Linux использует монолитное ядро, многие низкоуровневые аспекты операционной системы зависят от демонов, таких как балансировка нагрузки и конфигурация межсетевого экрана. 
+
+Какие демоны должны быть активными, зависит от цели системы. Набор активных демонов также должен быть изменен во время выполнения, чтобы службы можно было запускать и останавливать без перезагрузки всей системы. Чтобы решить эту проблему, каждый крупный дистрибутив Linux предлагает ту или иную форму служебной утилиты для управления системой. 
+
+Службы могут управляться сценариями оболочки или программой и поддерживающими ее файлами конфигурации. Первый метод реализуется стандартом SysVinit, также известным как System V или просто SysV. Второй способ реализован systemd и Upstart. Исторически диспетчеры служб на основе SysV наиболее часто использовались в дистрибутивах Linux. Сегодня менеджеры служб на основе systemd чаще встречаются в большинстве дистрибутивов Linux. Диспетчер служб - это первая программа, запускаемая ядром в процессе загрузки, поэтому ее PID (идентификационный номер процесса) всегда равен `1`.
