Update 101.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -8,10 +8,15 @@
 | **Урок:**         | 1 из 1                                      |
 
 
-# Введение
+## Введение
 
 Общей чертой Unix подобных операционных систем, является использование разных процессов для управления отдельными функциями системы. Эти процессы, называемые *демонами*(или, в более общем смысле, *службами*), также отвечают за расширенные функции, лежащие в основе операционной системы, такие как службы сетевых приложений(HTTP-сервер, совместное использование файлов, электронная почта и т. д.), базы данных, конфигурация по требованию и т. д. Несмотря на то, что Linux использует монолитное ядро, многие низкоуровневые аспекты операционной системы зависят от демонов, таких как балансировка нагрузки и конфигурация межсетевого экрана. 
 
 Какие демоны должны быть активными, зависит от цели системы. Набор активных демонов также должен быть изменен во время выполнения, чтобы службы можно было запускать и останавливать без перезагрузки всей системы. Чтобы решить эту проблему, каждый крупный дистрибутив Linux предлагает ту или иную служебную утилиту для управления системой. 
 
 Службы могут управляться сценариями оболочки или программой и поддерживающими ее файлами конфигурации. Первый метод реализуется стандартом *SysVinit*, также известным как *System V* или просто *SysV*. Второй способ реализован *systemd* и *Upstart*. Исторически диспетчеры служб на основе SysV наиболее часто использовались в дистрибутивах Linux. Сегодня менеджеры служб на основе systemd чаще встречаются в большинстве дистрибутивов Linux. Диспетчер служб - это первая программа, запускаемая ядром в процессе загрузки, поэтому ее PID (идентификационный номер процесса) всегда равен `1`.
+
+
+## SysVinit
+
+Диспетчер служб, основанный на стандарте SysVinit, будет предоставлять предопределенные наборы состояний системы, называемые *уровнями выполнения*, и соответствующие им файлы сценариев службы для выполнения. Уровни выполнения нумеруются от 0 до 6 и обычно используются для следующих целей: Уровень выполнения 0 Завершение работы системы. Уровень выполнения 1, s или одиночный Однопользовательский режим, без сети и других несущественных возможностей (режим обслуживания). Уровень выполнения 2, 3 или 4 Многопользовательский режим. Пользователи могут войти в систему с консоли или по сети. Уровни выполнения 2 и 4 используются нечасто. Уровень выполнения 5 Многопользовательский режим. Это эквивалентно 3 плюс логин в графическом режиме. Уровень выполнения 6 Перезагрузка системы. За управление уровнями запуска и связанными демонами / ресурсами отвечает программа / sbin / init. Во время инициализации системы программа init идентифицирует запрошенный уровень запуска, определенный параметром ядра или в файле / etc / inittab, и загружает связанные сценарии, перечисленные там для данного уровня запуска. Каждый уровень запуска может иметь множество связанных служебных файлов, обычно сценариев в каталоге /etc/init.d/. Поскольку не все уровни выполнения в разных дистрибутивах Linux эквивалентны, краткое описание назначения уровня выполнения также можно найти в дистрибутивах на основе SysV. В синтаксисе файла / etc / inittab используется следующий формат:
